--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ stable-baselines3 = "^2.2.1"
 shimmy = "^1.3.0"
 gymnasium = "^0.29.1"
 matplotlib = "^3.8.3"
+tclab = "^1.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.3"
 
 [build-system]
 requires = ["poetry-core"]
